--- a/src/app/pages/medecin/vaccin/vaccin.component.html
+++ b/src/app/pages/medecin/vaccin/vaccin.component.html
@@ -1,7 +1,7 @@
 <app-toolbar-med></app-toolbar-med>
 <p class="nav-place-med"></p>
-<button mat-icon-button routerLink="/contexteFamilial">
-  <mat-icon>assignment</mat-icon>Accès formulaire soignant
+<button  routerLink="/contexteFamilial">
+  Accès formulaire soignant
 </button>
 
 
