--- a/src/app/partials/toolbar-med/toolbar-med.component.html
+++ b/src/app/partials/toolbar-med/toolbar-med.component.html
@@ -2,32 +2,32 @@
     <label style="float: left;display: block;
     width: 100%;" align="right">Médecin</label>
       <mat-toolbar class="color-toolbar" >
-      <mat-button-toggle-group>
-        <mat-button-toggle class="Second-button-toolbar color-button-toolbar" style="background-color: white;">Observation médicale pédiatrique</mat-button-toggle>
-        </mat-button-toggle-group>
+
+        <p class="Second-button-toolbar color-button-toolbar" style="background-color: white;">Observation médicale pédiatrique</p>
+
     </mat-toolbar>
     <mat-toolbar class="color-toolbar" >
-      <mat-button-toggle-group>
-        <mat-button-toggle routerLinkActive="Color" class="Second-button-toolbar color-button-toolbar"routerLink="/Admission">Admission
-        </mat-button-toggle>
-        <mat-button-toggle class="Second-button-toolbar color-button-toolbar"
-          routerLink="/ExamenCliniqueInitial" routerLinkActive="Color">Examen clinique initial</mat-button-toggle>
-        <mat-button-toggle class="Second-button-toolbar color-button-toolbar"
-          routerLink="/EvolutionMedical" routerLinkActive="Color">Evolution médicale</mat-button-toggle>
-                  <mat-button-toggle class="Second-button-toolbar color-button-toolbar" routerLinkActive="Color" routerLink="/atcdFam">
+
+        <button routerLinkActive="Color" class="Second-button-toolbar color-button-toolbar"routerLink="/Admission">Admission
+        </button>
+        <button class="Second-button-toolbar color-button-toolbar"
+          routerLink="/ExamenCliniqueInitial" routerLinkActive="Color">Examen clinique initial</button>
+        <button class="Second-button-toolbar color-button-toolbar"
+          routerLink="/EvolutionMedical" routerLinkActive="Color">Evolution médicale</button>
+                  <button class="Second-button-toolbar color-button-toolbar" routerLinkActive="Color" routerLink="/atcdFam">
                     ATCD familiaux -
-                    Arbre Généalogique</mat-button-toggle>
-                <mat-button-toggle class="Second-button-toolbar color-button-toolbar" routerLinkActive="Color"
+                    Arbre Généalogique</button>
+                <button class="Second-button-toolbar color-button-toolbar" routerLinkActive="Color"
                   routerLink="/grosssessePeriodeNeonat">
-                  Grossesse - période Néonatale</mat-button-toggle>
-                 <mat-button-toggle class="Second-button-toolbar color-button-toolbar" routerLinkActive="Color"
+                  Grossesse - période Néonatale</button>
+                 <button class="Second-button-toolbar color-button-toolbar" routerLinkActive="Color"
                   routerLink="/vaccin">
-                Vaccin</mat-button-toggle>
-                <mat-button-toggle class="Second-button-toolbar color-button-toolbar"
-          routerLink="/CroissanceMed" routerLinkActive="Color">Croissance</mat-button-toggle>
-        <mat-button-toggle class="Second-button-toolbar color-button-toolbar"
-          routerLink="/Sortie" routerLinkActive="Color">Sortie</mat-button-toggle>
-        </mat-button-toggle-group>
+                Vaccin</button>
+                <button class="Second-button-toolbar color-button-toolbar"
+          routerLink="/CroissanceMed" routerLinkActive="Color">Croissance</button>
+        <button class="Second-button-toolbar color-button-toolbar"
+          routerLink="/Sortie" routerLinkActive="Color">Sortie</button>
+
     </mat-toolbar>
 
   </p>
