--- a/src/app/pages/medecin/evol-med/evol-med.component.html
+++ b/src/app/pages/medecin/evol-med/evol-med.component.html
@@ -1,6 +1,6 @@
 <app-toolbar-med></app-toolbar-med>
-<p class="nav-place-med"></p>
-<button  mat-icon-button routerLink="/contexteFamilial"><mat-icon>assignment</mat-icon>Accès formulaire soignant</button>
+<p class="nav-place-med">
+<button   routerLink="/contexteFamilial">Accès formulaire soignant</button>
 
 <section>
   <div>
@@ -31,11 +31,11 @@
           </mat-expansion-panel-header>
           <div class="row">
             <div class="content">
-              <mat-radio-group aria-label="Select an option">
+              <fieldset aria-label="Select an option">
                 <label>Patient concerné :</label>
-                <mat-radio-button value="1">Oui</mat-radio-button>
-                <mat-radio-button value="2">Non</mat-radio-button>
-              </mat-radio-group>
+                <input type="radio" value="1">Oui
+                <input type="radio" value="2">Non
+              </fieldset>
             </div>
             <div class="content">
               <a href=" ">Inclusion dans un protocole de recherche</a>
@@ -107,7 +107,7 @@
         <mat-expansion-panel [expanded]="true">
           <mat-expansion-panel-header class="panel">
             <mat-panel-title>
-              Examens réalisés <p style="margin-left: 10%;color: red;">/!\Aujourd'huis pas de méthode de récupération des données de CyberLab</p>
+              Examens réalisés <p style="margin-left: 10%;color: red;">/!\Aujourd'huis pas de méthode de récupération des données de CyberLab
             </mat-panel-title>
           </mat-expansion-panel-header>
           <div class="row">
@@ -125,15 +125,15 @@
             <option>AB-</option>
           </select>
           <label style="margin-left: 10%;">Rhésus :</label>
-          <mat-radio-group aria-label="Select an option">
-            <mat-radio-button value="1">Positif</mat-radio-button>
-            <mat-radio-button value="2">Négatif</mat-radio-button>
-          </mat-radio-group>
+          <fieldset aria-label="Select an option">
+            <input type="radio" value="1">Positif
+            <input type="radio" value="2">Négatif
+          </fieldset>
           <label style="margin-left: 10%;">Coombs :</label>
-          <mat-radio-group aria-label="Select an option">
-            <mat-radio-button value="1">Positif</mat-radio-button>
-            <mat-radio-button value="2">Négatif</mat-radio-button>
-          </mat-radio-group>
+          <fieldset aria-label="Select an option">
+            <input type="radio" value="1">Positif
+            <input type="radio" value="2">Négatif
+          </fieldset>
             </div>
             <div class="content">
               <p>Le groupe sanguin définitif ne sera déterminé qu'après l'âge de 6 mois.</p>
@@ -176,21 +176,21 @@
           </mat-expansion-panel-header>
           <div class="row">
             <div class="content">
-              <p style="color: gray;">Nouvelle saisie</p> <hr>
+              <p style="color: gray;">Nouvelle saisie <hr>
             </div>
             <div class="content">
               <label>Date / heure</label>
               <input type="date">
               <input type="datetime">
-              <mat-radio-group aria-label="Select an option">
-                <mat-radio-button value="1">Visite</mat-radio-button>
-                <mat-radio-button value="2">Staff/RCP</mat-radio-button>
-                <mat-radio-button value="3">Exam.complément.</mat-radio-button>
-                <mat-radio-button value="4">Suivie des soins</mat-radio-button>
-              </mat-radio-group>
-              <mat-radio-group aria-label="Select an option" style="margin-left: 5%;">
-                <mat-radio-button value="1">Synthèse périodique</mat-radio-button>
-              </mat-radio-group>
+              <fieldset aria-label="Select an option">
+                <input type="radio" value="1">Visite
+                <input type="radio" value="2">Staff/RCP
+                <input type="radio" value="3">Exam.complément.
+                <input type="radio" value="4">Suivie des soins
+              </fieldset>
+              <fieldset aria-label="Select an option" style="margin-left: 5%;">
+                <input type="radio" value="1">Synthèse périodique
+              </fieldset>
             </div>
             <div class="content">
               <p>Description</p>
@@ -199,51 +199,7 @@
             <div class="content">
               <label style="margin-left: 60%;">Signature</label>
               <input matInput value="user" disabled="true" style="width: 20%;">
-              <mat-button-toggle class="Second-button-toolbar color-button-toolbar" style="background-color: rgb(203, 212, 243);">Historiser
-              </mat-button-toggle>
-            </div>
-            <div class="content">
-              <p style="color: gray;">Historique</p>
-              <hr>
-            </div>
-            <div class="content">
-            <mat-checkbox #checkBox>Afficher historique</mat-checkbox>
-            <select *ngIf="checkBox.checked" style="margin-left: 10%;">
-              <option></option>
-              <option>Toutes</option>
-            </select>
-            <label *ngIf="checkBox.checked">Evolution(s)       du</label>
-            <input matInput type="date"*ngIf="checkBox.checked">
-            <label *ngIf="checkBox.checked">au</label>
-            <input matInput type="date"*ngIf="checkBox.checked">
-            </div>
-            <div class="content" *ngIf="checkBox.checked">
-              <div class="tableau">
-                <div class="tablHeader">
-                  <mat-grid-list cols="5" rowHeight="11:1">
-                    <mat-grid-tile>Date</mat-grid-tile>
-                    <mat-grid-tile>Heure</mat-grid-tile>
-                    <mat-grid-tile>Type</mat-grid-tile>
-                    <mat-grid-tile>Description</mat-grid-tile>
-                    <mat-grid-tile>Signataire</mat-grid-tile>
-                  </mat-grid-list>
-                </div>
-                <mat-grid-list cols="5" rowHeight="11:1" class="tableInput">
-                  <mat-grid-tile><input matInput type="date" [(ngModel)]="val5"></mat-grid-tile>
-                  <mat-grid-tile><input matInput style="width: 100%;"></mat-grid-tile>
-                  <mat-grid-tile><input matInput style="width: 100%;"></mat-grid-tile>
-                  <mat-grid-tile><input matInput style="width: 100%;"></mat-grid-tile>
-                  <mat-grid-tile><input matInput style="width: 100%;"></mat-grid-tile>
-                </mat-grid-list>
-                <div class="showInputField"></div>
-                <mat-grid-list cols="5" rowHeight="11:1" class="tableInput" *ngIf="val5 != ''">
-                  <mat-grid-tile><input matInput type="date"></mat-grid-tile>
-                  <mat-grid-tile><input matInput style="width: 100%;"></mat-grid-tile>
-                  <mat-grid-tile><input matInput style="width: 100%;"></mat-grid-tile>
-                  <mat-grid-tile><input matInput style="width: 100%;"></mat-grid-tile>
-                  <mat-grid-tile><input matInput style="width: 100%;"></mat-grid-tile>
-                </mat-grid-list>
-              </div>
+
             </div>
           </div>
         </mat-expansion-panel>
